--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "drive-backend",
     "version": "1.0.0",
     "main": "index.js",
-    "author": "",
+    "author": "Muhammed Zahid <dev.muhammedzahid@gmail.com>",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
